--- a/style.css
+++ b/style.css
@@ -1,19 +1,130 @@
 h1 {
-	color: white;
-	text-align: center;
+	color: black;
+	text-align: left;
 	font-size: 300%;
+	position: relative;
+	top: 20px;
+	left: 20px;
+}
+
+#box1 {
+	width: 600px;
+	height: 300px;
+	color: black;
+	margin: 60px 25px;
+}
+
+#box2 {
+	width: 600px;
+	height: 100px;
+	color: black;
+	margin: 60px 25px;
+	position: relative;
+	bottom: 230px;
 }
 
 p {
-	font-size: 200%;
-	color: white;
+	font-size: 250%;
+	color: black;
+}
+
+#background {
+	position: relative;
+	top: 100px;
+}
+
+#myactive {
+	position: relative;
+	bottom: 70px;
+	left: 25px;
+
+}
+
+#since {
+	position: relative;
+	bottom: 210px;
+	left: 1px;
+
+}
+
+#box3 {
+	width: 600px;
+	height: 300px;
+	color: black;
+	position: relative;
+
+}
+
+.first {
+	position: relative;
+	top: 30px;
 }
 
 sub {
-	font-size: 130%;
-	color: white;
+	font-size:125%;
+	color: black;
+}
+
+img {
+	size: width:200px; height:400px;
+	border-style: solid ;
+	border-color: #001f3f ;
+	position:absolute;
+	top: 10px;
+	right: 80px;
 }
 
 body {
-	background-color: powderblue;
+	background-color: lightskyblue ;
 }
+
+#all {
+	position: relative;
+	bottom: 40px;
+}
+
+.container {
+	width: 80%;
+	margin-left: 20px;
+}
+
+header {
+	background: lightseagreen;
+}
+
+nav {
+	float: left;
+}
+
+header::after {
+	content:'';
+	display: table;
+	clear: both;
+}
+
+nav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+nav li {
+	display: inline-block;
+	margin-right: 90px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	padding-left: 0px;
+
+}
+
+nav a {
+	color: white;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 16px;
+}
+
+nav a:hover {
+	color: black;
+}
+
