--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1 {
 	left: 20px;
 }
 
+html, body {
+	height: 100%;
+}
+
 #box1 {
 	width: 600px;
 	height: 300px;
@@ -68,7 +72,8 @@ sub {
 img {
 	size: width:200px; height:400px;
 	border-style: solid ;
-	border-color: #001f3f ;
+	border-color: lightseagreen ;
+	border-width: 4px;
 	position:absolute;
 	top: 10px;
 	right: 80px;
@@ -127,4 +132,27 @@ nav a {
 nav a:hover {
 	color: black;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
