--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ h1 {
 	left: 20px;
 }
 
-html, body {
-	height: 100%;
-}
+
 
 #box1 {
 	width: 600px;
@@ -164,19 +162,21 @@ nav a:hover {
 	bottom: 600px;
 }
 
+#contain {
+	min-height: -10px;
+}
 
+#main {
+	overflow: auto;
+	padding-bottom:100px;
 
-
-
-
-
-
-
-
-
-
-
-
-
+}
+#footer {
+	background-color: lightseagreen;
+	position: relative;
+	height: 100px;
+	margin-top: -100px;
+	clear: both;
+}
 
 
