--- a/style.css
+++ b/style.css
@@ -68,10 +68,13 @@ sub {
 }
 
 img {
-	size: width:200px; height:400px;
 	border-style: solid ;
 	border-color: lightseagreen ;
 	border-width: 4px;
+}
+
+.sarah {
+	size: width:200px; height:400px;
 	position:absolute;
 	top: 10px;
 	right: 80px;
@@ -115,8 +118,10 @@ nav li {
 	display: inline-block;
 	margin-left: 10px;
 	padding-top: 25px;
-	padding-bottom: 25px;
-	padding-left: 30px;
+	padding-bottom: 30px;
+	padding-left: 20px;
+	position: relative;
+	left: 80px;
 
 }
 
@@ -178,5 +183,12 @@ nav a:hover {
 	margin-top: -100px;
 	clear: both;
 }
+
+#socialmediaicons ul li {display: inline;}
+#socialmediaicons {
+	padding-top: 10px;
+	margin-left: 10px;
+}
+
 
 
